# chat-manager-flask

./: README.md  config.py  pyproject.toml  runner.py
app/: __init__.py  models.py
app/api/: user_api.py
app/forms/: authorization.py
app/routes/: auth.py  main.py
app/socket/: socket.py
app/sockets/: socket.py
app/static/css/: authorization.css  general.css  main.css
app/static/js/: api_methods.js  loadmessages.js  notifications.js  profiletoggler.js  render_dialogs.js  rendermessages.js  socket_client.js
app/templates/: authorization.html  base.html  main.html  users_table.html
migrations/: env.py
migrations/versions/: 5aaf488c8a77_initial_migration.py  6da40063c6f5_initial_migration.py  7145dd9f463e_initial_migration.py  74163fe4f8d2_added_name_and_contact.py  7ced968075b8_initial_migration.py  81f7b7ccf483_added_request_to_call.py  85a371f16232_initial_migration.py  9fcc995b9609_added_user_is_banned.py  b8279f8256ca_added_user_number.py  b95e16c3f4b0_initial_migration.py  e4424aabc2f6_initial_migration.py  fc7e34a88f66_initial_migration.py  fdbe0ba85feb_added_column_for_notifications.py
