[tool.poetry]
name = "chat-manager-flask"
version = "0.1.0"
description = ""
authors = ["Irishey <markirill21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = {extras = ["async"], version = "^2.0.3"}
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
