[tool.poetry]
name = "chat-manager-flask"
version = "0.1.0"
description = ""
authors = ["Irishey <markirill21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-Migrate = "^3.1.0"
python-dotenv = "^0.20.0"
Flask = "^2.0.3"
httpx = "^0.22.0"
Flask-SocketIO = "^5.1.1"
gevent-websocket = "^0.10.1"
eventlet = "^0.33.0"
Flask-WTF = "^1.0.1"
Flask-Login = "^0.6.0"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
